# HW_13-2_WEB

./: pyproject.toml
quotes/: manage.py
