[tool.poetry]
name = "HW_13-2_WEB"
version = "0.1.0"
description = ""
authors = ["SaitovMykyta <rassskoll@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
pymongo = "^4.8.0"
django = "5.0.7"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
